# playwright-pytest-framework

./: .env  .gitignore  pyproject.toml  pytest.ini  requirements.txt
utils/: config.py  helpers.py  logger.py
